src/test/ui/impl-unused-rps-in-assoc-type.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-rps-in-assoc-type.rs:21:6
   |
21 | impl<'a> Fun for Holder { //~ ERROR E0207
   |      ^^ unconstrained lifetime parameter

error: aborting due to previous error

